--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = 'hatchling.build'
 
 [project]
 name = "pfc_model"
-version = "0.0.1"
+version = "0.0.2"
 authors = [
   { name="Marcelo Rempel", email="marcelo.rafael@hotmail.com" },
 ]
@@ -15,6 +15,16 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
+]
+dependencies =[
+    "numpy>=1.23.5",
+    "dataclasses>=0.6",
+    "matplotlib>=3.5.2",
+    "pandas>=1.5.2",
+    "brian2>=2.5.1",
+    "scipy>=1.9.3",
+    "hmmlearn>=0.2.8",
+    "xarray>=2022.12.0",
 ]
 
 [project.urls]
