--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
+
 dependencies =[
     "numpy>=1.23.5",
     "dataclasses>=0.6",
@@ -23,9 +24,12 @@ dependencies =[
     "pandas>=1.5.2",
     "brian2>=2.5.1",
     "scipy>=1.9.3",
-    "hmmlearn>=0.2.8",
     "xarray>=2022.12.0",
+    "hmmlearn@git+https://github.com/hmmlearn/hmmlearn"
 ]
+
+[tool.hatch.metadata]
+allow-direct-references = true
 
 [project.urls]
 "Homepage" = "None"
