--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,13 +19,13 @@ classifiers = [
 
 dependencies =[
     "numpy>=1.23.5",
-    "dataclasses>=0.6",
     "matplotlib>=3.5.2",
     "pandas>=1.5.2",
     "brian2>=2.5.1",
     "scipy>=1.9.3",
     "xarray>=2022.12.0",
-    "hmmlearn@git+https://github.com/hmmlearn/hmmlearn"
+    "hmmlearn@git+https://github.com/hmmlearn/hmmlearn",
+    "seaborn>=0.12.2"
 ]
 
 [tool.hatch.metadata]
