--- a/test.toml
+++ b/test.toml
@@ -1,5 +1,3 @@
-test = 33
-
 [build-system]
 requires = [ "hatchling",]
 build-backend = "hatchling.build"
@@ -16,9 +14,15 @@ dependencies = [ "numpy>=1.23.5", "matplotlib>=3.5.2", "pandas>=1.5.2", "brian2>
 name = "Marcelo Rempel"
 email = "marcelo.rafael@hotmail.com"
 
+[test]
+test1 = "a"
+
 [project.urls]
 Homepage = "None"
 "Bug Tracker" = "None"
+
+[test.test2]
+testtest = "yy"
 
 [tool.hatch.metadata]
 allow-direct-references = true
