--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ authors = [
 ]
 description = "A prefrontal cortex computational model."
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.11"
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
@@ -18,16 +18,17 @@ classifiers = [
 ]
 
 dependencies =[
-    "numpy>=1.23.5",
-    "matplotlib>=3.5.2",
-    "pandas>=1.5.2",
+    "numpy>=1.24.2",
+    "matplotlib>=3.7.1",
+    "pandas>=1.5.3",
     "brian2>=2.5.1",
-    "scipy>=1.9.3",
-    "xarray>=2022.12.0",
-    "hmmlearn@git+https://github.com/hmmlearn/hmmlearn",
+    "scipy>=1.10.1",
+    "xarray>=2023.3.0",
     "seaborn>=0.12.2",
-    "toml>=0.10.2"
+    "toml>=0.10.2",
+    "hmmlearn>=0.3.0",
 ]
+
 
 [tool.hatch.metadata]
 allow-direct-references = true
